Implemented Issue #15 Furthermore changed track_id to route_id everywhere
